# 2dGameEngine

./: CMakeLists.txt  GameEngine  README.md  build.sh  clean  game
AutoMake/: CMakeCache.txt  CMakeLists.txt  clean  rebuild
Editor/: Editor  Makefile
Editor/src/: Constants.h  Editor.cpp  Editor.h  Element.h  ElementManager.h  TextureManager.h  main.cpp
Editor/src/Elements/: Bar.h
android/: action
android/TestGame/: local.properties
android/TestGame/app/: build.gradle
android/TestGame/app/jni/: SDL  SDL_image  SDL_mixer  SDL_net  SDL_ttf
android/TestGame/app/jni/src/: Android.mk  AssetManager.h  Constants.h  Game.h  Main.cpp
android/TestGame/app/src/main/: AndroidManifest.xml
android/TestGame/app/src/main/java/com/ssamdev/games/: TestGame.java
android/setup/: copy_assets  copy_src  link_libraries  links
assets/scripts/: Level1.lua
src/: .Entity.cpp.swp  .Game.cpp.swp  Animation.cpp  AssetManager.cpp  AssetManager.h  Collision.cpp  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/Components/: .ColliderComponent.h.swp  .KeyboardControlComponent.h.swp  .SpriteComponent.h.swp  ColliderComponent.h  KeyboardControlComponent.h  ProjectileEmitterComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
